src/tests/let_statements/snapshots/monkey_interpreter__tests__let_statements__test_let_statement_case_4_lexical_analysis.snap
---
source: src/tests/let_statements/mod.rs
expression: tokens

---
[
    Let,
    Identifier {
        literal: "add",
    },
    Assign,
    Function,
    OpeningRoundBracket,
    Identifier {
        literal: "x",
    },
    Comma,
    Identifier {
        literal: "y",
    },
    ClosingRoundBracket,
    OpeningCurlyBracket,
    Identifier {
        literal: "x",
    },
    Plus,
    Identifier {
        literal: "y",
    },
    ClosingCurlyBracket,
    EndOfFile,
]
