src/tests/let_statements/snapshots/monkey_interpreter__tests__let_statements__test_let_statement_case_4_syntax_analysis.snap
---
source: src/tests/let_statements/mod.rs
expression: abstract_syntax_tree

---
[
    Statement {
        statement: Let {
            identifier: "add",
            expression: Function {
                parameters: [
                    "x",
                    "y",
                ],
                block: Block {
                    nodes: [
                        Expression {
                            expression: Infix {
                                left_hand: Identifier {
                                    identifier: "x",
                                },
                                operator: Plus,
                                right_hand: Identifier {
                                    identifier: "y",
                                },
                            },
                        },
                    ],
                },
            },
        },
    },
]
