src/tests/let_statements/snapshots/monkey_interpreter__tests__let_statements__test_let_statement_case_5_lexical_analysis.snap
---
source: src/tests/let_statements/mod.rs
expression: tokens
---
[
    Let,
    Identifier {
        literal: "a",
    },
    Assign,
    Integer {
        literal: 5,
    },
    SemiColon,
    EndOfFile,
]
