src/tests/let_statements/snapshots/monkey_interpreter__tests__let_statements__test_let_statement_case_5_syntax_analysis.snap
---
source: src/tests/let_statements/mod.rs
expression: abstract_syntax_tree
---
[
    Statement {
        statement: Let {
            identifier: "a",
            expression: Integer {
                literal: 5,
            },
        },
    },
]
