src/tests/let_statements/snapshots/monkey_interpreter__tests__let_statements__test_let_statement_case_6_environment.snap
---
source: src/tests/let_statements/mod.rs
expression: evaluator

---
Evaluator {
    environment: Environment {
        variables: {
            "a": Integer {
                value: 25,
            },
            "b": Integer {
                value: 91,
            },
        },
        sub_environment: None,
    },
}
