src/tests/let_statements/snapshots/monkey_interpreter__tests__let_statements__test_let_statement_case_6_lexical_analysis.snap
---
source: src/tests/let_statements/mod.rs
expression: tokens
---
[
    Let,
    Identifier {
        literal: "a",
    },
    Assign,
    Integer {
        literal: 25,
    },
    SemiColon,
    Let,
    Identifier {
        literal: "b",
    },
    Assign,
    Integer {
        literal: 91,
    },
    SemiColon,
    EndOfFile,
]
